# Emanduite

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
schemas/: emanduite-project.schema.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  extension.rs  lib.rs  logging.rs  main.rs  recovery.rs  secret.rs  workflow.rs  workspace.rs
src-tauri/src/blueprint/: migration.rs  mod.rs  model.rs  persistence.rs  validation.rs
src-tauri/src/database/: mod.rs  sqlite.rs
src-tauri/src/generator/: mod.rs  ownership.rs  render.rs
src/app/: AiDesigner.test.ts  AiDesigner.tsx  AiSettings.tsx  App.tsx  ConfigEditors.tsx  ConnectionManager.tsx  ErrorBoundary.tsx  ExtensionEditor.tsx  GeneratorPanel.tsx  ProjectManager.tsx  SchemaEditor.tsx  SchemaExplorer.tsx  WorkflowPanel.tsx  useWorkspace.ts
src/contracts/: blueprint.ts  commands.ts  generator.ts  schema-editor.ts  workflow.ts  workspace.ts
src/lib/: tauri.ts
tests/: app.test.tsx  generator-panel.test.tsx  phase3-editors.test.tsx  schema-explorer.test.tsx  workflow-panel.test.tsx
